<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAE5D3"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="737dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="0dp"
            android:background="#FAE5D3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/plumber"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/rameshbhai_rathod"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/_9756347826"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_plumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="#2ECC71"
                    android:fontFamily="@font/adamina"
                    android:text="@string/call"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/electrician"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/kamleshbhai_shah"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/_9976835211"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_electrician"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="#2ECC71"
                    android:fontFamily="@font/adamina"
                    android:text="@string/call"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/carpenter"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/sureshbhai_patel"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_horizontal"
                android:text="@string/_8457214360"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="DuplicateIds" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_carpenter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="#2ECC71"
                    android:fontFamily="@font/adamina"
                    android:text="@string/call"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>